--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 152 points<br>
+Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 158 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -36,6 +36,7 @@ Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Banker (Level 4)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Banker (Level 5)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
@@ -52,16 +53,16 @@ Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1490 symbolic-ref
-    852 status
-    146 checkout
-    135 add
-     74 rebase
-     43 pull
+   1541 symbolic-ref
+    909 status
+    149 checkout
+    145 add
+     79 rebase
+     44 pull
+     42 commit
      40 push
-     39 commit
      37 stash
-     30 merge
+     31 merge
      25 config
      21 achievements
       9 branch
