--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 12/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 164 points<br>
+Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 166 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -24,6 +24,7 @@ Unlocked 12/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Carpenter (Level 1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
+<li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -55,26 +56,26 @@ Unlocked 12/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1875 symbolic-ref
-   1265 status
-    180 checkout
-    165 add
-     96 rebase
-     51 pull
-     51 commit
-     49 push
-     43 stash
-     36 merge
+   1981 symbolic-ref
+   1380 status
+    199 checkout
+    181 add
+    107 rebase
+     60 pull
+     56 commit
+     55 push
+     46 stash
+     39 merge
      25 config
      21 achievements
-     12 branch
+     13 branch
       5 rm
       3 clone
       2 remote
+      2 fetch
       1 show
       1 --help
       1 gui
-      1 fetch
       1 cherry-pick
 </pre>
 <script type="text/javascript">
@@ -94,7 +95,6 @@ There are 48 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Caretaker</div><div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Chimney Sweeper</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
-<li><div class="title">Collector</div><div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Fisherman</div><div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
